# desirable-properties-master

./: NSGADTLZ2.html  NSGADTLZ7.html  NSGA_DTLZ7.html  README.md  RVEADTLZ2.html  RVEADTLZ7.html  RVEA_DTLZ7.html  baseADM.py  desirable_preferences.py  dtlz2_3_pbea.csv  dtlz2_3_rnsga2.csv  openurl.html  pmad.ipynb  pyproject.toml
new_files/: deal_optimizer.py  objectives.py
notebooks/: .~lock.iRVEAsample.csv#  .~lock.many_vectors_0.csv#  .~lock.new_results_it_1.csv#  DTLZ7_3_it1.csv  IBM.html  NSGADTLZ2.html  NSGADTLZ3.html  NSGADTLZ7.html  NS_dtlz7_3_in1.csv  NS_dtlz7_3_in2.csv  NS_dtlz7_3_in3.csv  NS_dtlz7_3_in4.csv  Problem.ipynb  RVEAwDTLZ2.html  RVEAwDTLZ3.html  RVEAwDTLZ7.html  RV_dtlz7_3_in1.csv  RV_dtlz7_3_in2.csv  RV_dtlz7_3_in3.csv  RV_dtlz7_3_in4.csv  average.csv  baseADM.py  bokehtest.py  decisionphase copy.ipynb  decisionphase.ipynb  desirable_preferences.py  ehmetric.py  extra.csv  few_solutions.ipynb  firsttry.ipynb  firsttry.py  generatePreference.py  iNSGAsamplple.csv  iRVEAsample.csv  my_nds.py  new_results2_it_0.csv  new_results2_it_1.csv  new_results2_it_2.csv  new_results2_it_3.csv  new_results2_it_4.csv  (+19 more)
notebooks/.ipynb_checkpoints/: Problem-checkpoint.ipynb
notebooks/desdeo_emo/EAs/: BaseEA.py  IOPIS.py
notebooks/desdeo_emo/utilities/: ReferenceVectors.py
notebooks/desdeo_problem/problem/: Problem.py
notebooks/desdeo_tools/utilities/: pmda.py  pmod.py  quality_indicator.py  rmetric.py  upcf.py
notebooks/results/new results/: average.csv  new_results_it_0.csv  new_results_it_1.csv  (+8 more)
old_files/: deal_optimizer.py  input.xlsx  model.py
(+8 files in other folders)
